k8s/production/stock.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wdm-kafka-stock
  labels:
    app: wdm-kafka
    service: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdm-kafka
      service: stock
  serviceName: wdm-kafka-stock
  template:
    metadata:
      labels:
        app: wdm-kafka
        service: stock
    spec:
      containers:
        - name: stock
          image: wdmk/stock:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
