k8s/production/users.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wdm-kafka-users
  labels:
    app: wdm-kafka
    service: users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wdm-kafka
      service: users
  serviceName: wdm-kafka-users
  template:
    metadata:
      labels:
        app: wdm-kafka
        service: users
    spec:
      containers:
        - name: users
          image: wdmk/users:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
