k8s/production/orders.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdm-kafka-orders
  labels:
    app: wdm-kafka
    service: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdm-kafka
      service: orders
  template:
    metadata:
      labels:
        app: wdm-kafka
        service: orders
    spec:
      containers:
        - name: orders
          image: wdmk/orders:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: wdm-kafka-orders
  labels:
    app: wdm-kafka
    service: orders
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: wdm-kafka
    service: orders
