k8s/production/payments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdm-kafka-payments
  labels:
    app: wdm-kafka
    service: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdm-kafka
      service: payments
  template:
    metadata:
      labels:
        app: wdm-kafka
        service: payments
    spec:
      containers:
        - name: payments
          image: wdmk/payments:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: wdm-kafka-payments
  labels:
    app: wdm-kafka
    service: payments
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
  selector:
    app: wdm-kafka
    service: payments
