k8s/production/rest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wdm-kafka-rest
  labels:
    app: wdm-kafka
    service: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wdm-kafka
      service: rest
  template:
    metadata:
      labels:
        app: wdm-kafka
        service: rest
    spec:
      containers:
        - name: rest
          image: wdmk/rest:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: wdm-kafka-rest
  labels:
    app: wdm-kafka
    service: rest
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  selector:
    app: wdm-kafka
    service: rest
